--- a/style.css
+++ b/style.css
@@ -153,15 +153,22 @@
     }
     .wrapper{
         position: relative;
-        top: 20%;
         width: 80%;
-        display: flex;
+        top: 5%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
         gap: 20px;
         margin: auto;
         align-items: center;
         justify-content: center;
     }
-
+    .pressure { grid-area: 1 / 1 / 2 / 2; }
+    .visibility { grid-area: 2 / 1 / 3 / 2; }
+    .humidity { grid-area: 1 / 2 / 2 / 3; }
+    .windSpeed { grid-area: 2 / 2 / 3 / 3; }
     .temperature{
         display: flex;
         margin: auto auto;
@@ -177,11 +184,18 @@
         border-radius: 12px;
         background-color: rgba(255, 255, 255, .3);
     }
-    .humidity,.windSpeed{
+    .humidity,.windSpeed, .pressure, .visibility{
         border: solid;
         padding: 5px;
         border-radius: 12px;
         box-shadow: 0 2px 2px;
+    }
+    .liquidGlass{
+        background-color: rgba(255, 255, 255, 0.7);
+        backdrop-filter: blur(12px) saturate(190%);
+        box-shadow: inset 0 2px 5px rgb(255, 255, 255),
+        0 2px 5px rgba(0, 0, 0, 0.65);
+        border-radius: 12px;
     }
 
     @media (max-width: 600px) {
@@ -189,10 +203,13 @@
         height: auto;
         flex-direction: column;
         padding: 0.8rem 1rem;
+        position: relative;
     }
 
     .logo {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
+        left: 5%;
+        position: absolute;
     }
 
     .aboutMe {
@@ -204,6 +221,7 @@
     }
     .search {
         position: static;
+        display: block;
         width: 90%;
         margin-top: 10px;
     }
@@ -213,5 +231,9 @@
     }
     .result{
         width: 80%;
+    }
+    .result{
+        height: auto;
+        padding-bottom: 20px;
     }
     }
